--- a/configs/intent.yaml
+++ b/configs/intent.yaml
@@ -1,71 +1,143 @@
+# ============================================================================
+# Intent Classification Task Configuration
+# ============================================================================
+
 task: intent
 seed: 0
+
+# ============================================================================
+# Model Configuration
+# ============================================================================
 model:
   path: models/Qwen2.5-Omni-3B
+
+  # LoRA (Low-Rank Adaptation) Configuration
+  lora:
+    r: 32                    # LoRA rank (higher = more parameters, better fit)
+    alpha: 64                # LoRA alpha scaling factor (typically 2x rank)
+    dropout: 0.1             # Dropout probability for LoRA layers
+    bias: none               # Bias type: none, all, or lora_only
+    target_modules:          # Modules to apply LoRA to
+      - q_proj
+      - k_proj
+      - v_proj
+      - o_proj
+      - out_proj
+      - fc1
+      - fc2
+    task_type: CAUSAL_LM
+
+# ============================================================================
+# Dataset Configuration
+# ============================================================================
 dataset:
+  # Dataset source
   dataset_name: marcel-gohsen/slurp
   dataset_config: null
+
+  # Data processing
   seed: 0
   num_proc: auto
   cache_splits: true
   force_rebuild: false
+
+  # Sample limits (null = use all)
   max_train_samples: null
   max_validation_samples: null
   max_test_samples: null
+
+  # Column mappings
   label_column: intent
   text_column: transcript
   audio_column: audio
+
+  # Split configuration
   split_percentages: null
   train_split: train
   validation_split: devel
   test_split: test
   stratify_by_column: label
+
+  # Task-specific options
   include_transcript: true
   prepend_scenario: false
-artifacts:
-  adapter_subdir: qwen2_5_omni_lora_intent
-metrics:
-  history_csv: intent_training_history.csv
-  loss_plot: intent_loss_accuracy.png
+
+# ============================================================================
+# Training Configuration
+# ============================================================================
 training:
+  # Batch sizes and accumulation
   per_device_train_batch_size: 16
   per_device_eval_batch_size: 16
   gradient_accumulation_steps: 2
+
+  # Optimization
   learning_rate: 3e-05
   lr_scheduler_type: cosine
+  warmup_ratio: 0.05
+  weight_decay: 0.01
+  max_grad_norm: 1.0
+
+  # Training duration
   num_train_epochs: 6
+
+  # Checkpointing
   save_strategy: steps
   save_steps: 100
   save_total_limit: 3
+
+  # Evaluation
   eval_strategy: steps
   eval_steps: 100
-  logging_steps: 50
   max_eval_samples: null
+  initial_eval: true
+
+  # Logging
+  logging_steps: 50
+  report_to:
+    - tensorboard
+    - wandb
+
+  # Early stopping
   early_stopping_patience: 5
   early_stopping_threshold: 0.001
-  initial_eval: true
   load_best_model_at_end: true
   metric_for_best_model: eval_macro_f1
   greater_is_better: true
-  max_grad_norm: 1.0
-  weight_decay: 0.01
+
+  # Performance optimizations
   bf16: true
   fp16: false
+  gradient_checkpointing: true
+  gradient_checkpointing_kwargs:
+    use_reentrant: false
+
+  # Data loading
   dataloader_num_workers: 8
   dataloader_pin_memory: true
   dataloader_prefetch_factor: 2
   group_by_length: false
   length_column_name: duration
-  report_to:
-    - tensorboard
-    - wandb
-  gradient_checkpointing: true
-  gradient_checkpointing_kwargs:
-    use_reentrant: false
-  remove_unused_columns: false
-  warmup_ratio: 0.05
+
+  # Other
   eval_accumulation_steps: 1
+  remove_unused_columns: false
+
+  # Generation parameters (for evaluation)
   generation_kwargs:
     max_new_tokens: 16
     do_sample: false
     num_beams: 1
+
+# ============================================================================
+# Artifacts Configuration
+# ============================================================================
+artifacts:
+  adapter_subdir: qwen2_5_omni_lora_intent
+
+# ============================================================================
+# Metrics Configuration
+# ============================================================================
+metrics:
+  history_csv: intent_training_history.csv
+  loss_plot: intent_loss_accuracy.png
