--- a/configs/speech_qa.yaml
+++ b/configs/speech_qa.yaml
@@ -1,73 +1,145 @@
+# ============================================================================
+# Speech Question Answering Task Configuration
+# ============================================================================
+
 task: speech_qa
 seed: 0
+
+# ============================================================================
+# Model Configuration
+# ============================================================================
 model:
   path: models/Qwen2.5-Omni-3B
+
+  # LoRA (Low-Rank Adaptation) Configuration
+  lora:
+    r: 32                    # LoRA rank (higher = more parameters, better fit)
+    alpha: 64                # LoRA alpha scaling factor (typically 2x rank)
+    dropout: 0.1             # Dropout probability for LoRA layers
+    bias: none               # Bias type: none, all, or lora_only
+    target_modules:          # Modules to apply LoRA to
+      - q_proj
+      - k_proj
+      - v_proj
+      - o_proj
+      - out_proj
+      - fc1
+      - fc2
+    task_type: CAUSAL_LM
+
+# ============================================================================
+# Dataset Configuration
+# ============================================================================
 dataset:
+  # Dataset source
   dataset_name: kresnik/spoken_squad
   dataset_config: null
+
+  # Data processing
   seed: 0
   num_proc: auto
   cache_splits: true
   force_rebuild: false
+
+  # Sample limits (null = use all)
   max_train_samples: null
   max_validation_samples: null
   max_test_samples: null
+
+  # Column mappings
   audio_column: audio
   question_column: question
   transcript_column: text
   context_column: context
   id_column: id
   answer_column: answers
+
+  # Split configuration
   split_percentages: null
   train_split: train
   validation_split: validation
   test_split: test
+
+  # Task-specific options
   include_transcript: true
   include_context: false
-artifacts:
-  adapter_subdir: qwen2_5_omni_lora_speech_qa
-metrics:
-  history_csv: speech_qa_training_history.csv
-  loss_plot: speech_qa_loss_metrics.png
+
+# ============================================================================
+# Training Configuration
+# ============================================================================
 training:
+  # Batch sizes and accumulation
   per_device_train_batch_size: 8
   per_device_eval_batch_size: 8
-  gradient_accumulation_steps: 4
+  gradient_accumulation_steps: 4   # Higher accumulation for larger effective batch
+
+  # Optimization
   learning_rate: 3e-05
   lr_scheduler_type: cosine
-  num_train_epochs: 6
+  warmup_ratio: 0.05
+  weight_decay: 0.01
+  max_grad_norm: 1.0
+
+  # Training duration
+  num_train_epochs: 6              # More epochs for complex QA task
+
+  # Checkpointing
   save_strategy: steps
   save_steps: 200
   save_total_limit: 3
+
+  # Evaluation
   eval_strategy: steps
   eval_steps: 200
-  logging_steps: 100
   max_eval_samples: null
-  early_stopping_patience: 6
-  early_stopping_threshold: 0.001
   initial_eval: true
+
+  # Logging
+  logging_steps: 100
+  report_to:
+    - tensorboard
+    - wandb
+
+  # Early stopping
+  early_stopping_patience: 6       # Higher patience for complex task
+  early_stopping_threshold: 0.001
   load_best_model_at_end: true
   metric_for_best_model: eval_f1
   greater_is_better: true
-  max_grad_norm: 1.0
-  weight_decay: 0.01
+
+  # Performance optimizations
   bf16: true
   fp16: false
+  gradient_checkpointing: true
+  gradient_checkpointing_kwargs:
+    use_reentrant: false
+
+  # Data loading
   dataloader_num_workers: 8
   dataloader_pin_memory: true
   dataloader_prefetch_factor: 2
   group_by_length: false
   length_column_name: duration
-  report_to:
-    - tensorboard
-    - wandb
-  gradient_checkpointing: true
-  gradient_checkpointing_kwargs:
-    use_reentrant: false
-  remove_unused_columns: false
-  warmup_ratio: 0.05
+
+  # Other
   eval_accumulation_steps: 1
+  remove_unused_columns: false
+
+  # Generation parameters (for evaluation)
   generation_kwargs:
-    max_new_tokens: 48
+    max_new_tokens: 48           # Medium length for answers
     do_sample: false
     num_beams: 1
+
+# ============================================================================
+# Artifacts Configuration
+# ============================================================================
+artifacts:
+  adapter_subdir: qwen2_5_omni_lora_speech_qa
+
+# ============================================================================
+# Metrics Configuration
+# ============================================================================
+metrics:
+  history_csv: speech_qa_training_history.csv
+  loss_plot: speech_qa_loss_metrics.png
