--- a/configs/emotion.yaml
+++ b/configs/emotion.yaml
@@ -120,11 +120,11 @@ training:
   eval_accumulation_steps: 1
   remove_unused_columns: false
 
-  # Generation parameters (for evaluation)
+  # Generation parameters (for constrained decoding evaluation)
   generation_kwargs:
-    max_new_tokens: 12
-    do_sample: false
-    num_beams: 1
+    max_new_tokens: 3        # Emotion labels are 1-2 tokens, 3 provides buffer
+    do_sample: false         # Greedy decoding for deterministic results
+    num_beams: 1            # No beam search needed with constraints
 
 # ============================================================================
 # Artifacts Configuration
