--- a/configs/speaker_id.yaml
+++ b/configs/speaker_id.yaml
@@ -124,11 +124,11 @@ training:
   eval_accumulation_steps: 1
   remove_unused_columns: false
 
-  # Generation parameters (for evaluation)
+  # Generation parameters (for constrained decoding evaluation)
   generation_kwargs:
-    max_new_tokens: 16
-    do_sample: false
-    num_beams: 1
+    max_new_tokens: 5        # Speaker IDs may vary in length, 5 provides buffer
+    do_sample: false         # Greedy decoding for deterministic results
+    num_beams: 1            # No beam search needed with constraints
 
 # ============================================================================
 # Artifacts Configuration
