--- a/configs/speaker_id.yaml
+++ b/configs/speaker_id.yaml
@@ -46,6 +46,9 @@ dataset:
   max_validation_samples: null
   max_test_samples: null
 
+  # Maximum audio duration in seconds (null = no limit)
+  max_duration: null
+
   # Column mappings
   label_column: speaker
   text_column: null
